--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,5 +1,8 @@
 div{
     background-color: tomato;
     padding: 20px;
-    text-size-adjust: 50px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+   
+
 }
